--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,5 +43,6 @@
         }, false);
       })(document);
     </script>
+    <script id="dsq-count-scr" src="//yuquiyu2017-github-io.disqus.com/count.js" async></script>
   </body>
 </html>
