--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}{% if page.comments %} • <a href="https://yuquiyu2017.github.io{{ page.url }}#disqus_thread">0 Comments</a>{% endif %}</span>
+  <span class="post-date">{{ page.date | date_to_string }}<!-- {% if page.comments %} • <a href="https://yuquiyu2017.github.io{{ page.url }}#disqus_thread">0 Comments</a>{% endif %} --></span>
   {{ content }}
 </div>
 
