--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,6 @@
       })(document);
     </script>
     <!-- <script id="dsq-count-scr" src="//yuquiyu2017-github-io.disqus.com/count.js" async></script> -->
+    {% include analytics.html %}
   </body>
 </html>
