--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -321,6 +321,7 @@ a.sidebar-nav-item:focus {
 .page-title,
 .post-title {
   margin-top: 0;
+  display: none;
 }
 
 /* Meta data line below post title */
@@ -329,6 +330,7 @@ a.sidebar-nav-item:focus {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+  display: none;
 }
 
 /* Related posts */
