Changed styling on .post-title and .post-date

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -317,6 +317,8 @@ a.sidebar-nav-item:focus {
 .post-title,
 .post-title a {
   color: #303030;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: .5rem;
 }
 .page-title,
 .post-title {
@@ -330,7 +332,8 @@ a.sidebar-nav-item:focus {
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  display: none;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: .5rem;
 }
 
 /* Related posts */
