--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   <span class="post-date">{{ page.date | date_to_string }}</span>
 </div>
 
-<div class="related">
+<!-- <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
@@ -23,5 +23,5 @@ layout: default
       </li>
     {% endfor %}
   </ul>
-</div>
+</div> -->
 <!-- {% include disqus.html %} -->
